--- a/build.gradle
+++ b/build.gradle
@@ -42,6 +42,14 @@ dependencies {
     api(group: openjfxGroup, name: 'javafx-media', version: openjfxVersion, classifier: openjfxPlatform)*/
 }
 
+jar {
+    manifest {
+        attributes(
+                'Main-Class': 'fr.timeto.astrauworld.launcher.LauncherFrame'
+        )
+    }
+}
+
 /*javafx {
     version = '19'
     modules = [ 'javafx.controls', 'javafx.fxml', 'javafx.swing', 'javafx.media', 'javafx.graphics' ]
