--- a/build.gradle
+++ b/build.gradle
@@ -30,6 +30,7 @@ dependencies {
     implementation 'org.apache.commons:commons-compress:1.21'
     implementation 'fr.litarvan:openauth:1.1.4'
     implementation 'com.github.Litarvan:Swinger:master-SNAPSHOT'
+    implementation 'com.github.TimEtOff:TimUtilsLib:1.2'
 }
 
 javafx {
