--- a/build.gradle
+++ b/build.gradle
@@ -8,7 +8,7 @@ plugins {
 apply plugin: 'org.openjfx.javafxplugin'
 
 group 'fr.timeto.astrauworld'
-version 'Beta2.1.0'
+version 'Beta2.2.0'
 
 repositories {
     mavenCentral()
@@ -29,8 +29,8 @@ dependencies {
     implementation 'org.json:json:20220924'
     implementation 'org.apache.commons:commons-compress:1.21'
     implementation 'fr.litarvan:openauth:1.1.4'
-    implementation 'com.github.Litarvan:Swinger:master-SNAPSHOT'
-    implementation 'com.github.TimEtOff:TimUtilsLib:1.3'
+    implementation 'fr.theshark34.swinger:swinger:1.0.1-BETA'
+    implementation 'com.github.TimEtOff:TimUtilsLib:main-SNAPSHOT'
 }
 
 javafx {
@@ -39,12 +39,12 @@ javafx {
 }
 
 application {
-    mainClassName = 'fr.timeto.astrauworld.assets.LauncherFrame'
+    mainClassName = 'fr.timeto.astrauworld.launcher.main.LauncherFrame'
 }
 
 jar {
     manifest {
-        attributes 'Main-Class': 'fr.timeto.astrauworld.assets.LauncherFrame'
+        attributes 'Main-Class': 'fr.timeto.astrauworld.launcher.main.LauncherFrame'
     }
     from {
         configurations.compileClasspath.collect {
