--- a/build.gradle
+++ b/build.gradle
@@ -31,6 +31,8 @@ dependencies {
     implementation 'fr.litarvan:openauth:1.1.4'
     implementation 'fr.theshark34.swinger:swinger:1.0.1-BETA'
     implementation 'com.github.TimEtOff:TimUtilsLib:main-SNAPSHOT'
+    implementation 'com.github.lucaazalim:minecraft-server-ping:b1d8c96009d3a86184f5e75820e1e6e97eee5cd1'
+    implementation 'org.projectlombok:lombok:1.18.20'
 }
 
 javafx {
