--- a/build.gradle
+++ b/build.gradle
@@ -28,7 +28,8 @@ dependencies {
     implementation 'fr.flowarg:openlauncherlib:3.2.5'
     implementation 'org.json:json:20220924'
     implementation 'org.apache.commons:commons-compress:1.21'
-    implementation 'fr.litarvan:openauth:1.1.4'
+//    implementation 'fr.litarvan:openauth:1.1.4'
+    implementation 'com.github.litarvan:OpenAuth:PR34-SNAPSHOT'
     implementation 'fr.theshark34.swinger:swinger:1.0.1-BETA'
     implementation 'com.github.TimEtOff:TimUtilsLib:main-SNAPSHOT'
     implementation 'com.github.lucaazalim:minecraft-server-ping:b1d8c96009d3a86184f5e75820e1e6e97eee5cd1'
