--- a/build.gradle
+++ b/build.gradle
@@ -8,7 +8,8 @@ plugins {
 apply plugin: 'org.openjfx.javafxplugin'
 
 group 'fr.timeto.astrauworld'
-version 'Beta2.2.3'
+version 'Beta2.2.4'
+// TODO CHANGER LA VERSION A CHAQUE FOIS
 
 repositories {
     mavenCentral()
