Beaucoup trop de trucs je sais plus

--- a/build.gradle
+++ b/build.gradle
@@ -33,7 +33,7 @@ dependencies {
     implementation('org.json:json:20220924')
     implementation('org.apache.commons:commons-compress:1.21')
 //    implementation('fr.litarvan:openauth:1.1.5')
-    implementation('com.github.litarvan:OpenAuth:PR34-SNAPSHOT')
+    implementation('com.github.litarvan:OpenAuth:master-SNAPSHOT')
     implementation('fr.theshark34.swinger:swinger:1.0.1-BETA')
     implementation('com.github.TimEtOff:TimUtilsLib:51d1744ba8e88d5978843d1b7b3743e0db0910e3')
     implementation('com.github.lucaazalim:minecraft-server-ping:b1d8c96009d3a86184f5e75820e1e6e97eee5cd1')
