--- a/build.gradle
+++ b/build.gradle
@@ -40,6 +40,8 @@ dependencies {
     implementation('org.projectlombok:lombok:1.18.20')
     implementation('org.commonmark:commonmark:0.21.0')
     implementation('com.github.Vatuu:discord-rpc:1.6.2')
+//    testImplementation('com.github.java-native-access:jna:5.6.0')
+//    testImplementation('net.java.dev.jna:jna:5.13.0')
 }
 
 javafx {
