--- a/build.gradle
+++ b/build.gradle
@@ -39,7 +39,8 @@ dependencies {
     implementation('com.github.lucaazalim:minecraft-server-ping:b1d8c96009d3a86184f5e75820e1e6e97eee5cd1')
     implementation('org.projectlombok:lombok:1.18.20')
     implementation('org.commonmark:commonmark:0.21.0')
-    implementation('com.github.Vatuu:discord-rpc:1.6.2')
+    implementation('com.github.TimEtOff:discord-rpc:master-SNAPSHOT')
+    implementation('net.harawata:appdirs:1.2.1')
 //    testImplementation('com.github.java-native-access:jna:5.6.0')
 //    testImplementation('net.java.dev.jna:jna:5.13.0')
 }
