--- a/src/main/resources/launcher.properties
+++ b/src/main/resources/launcher.properties
@@ -6,5 +6,5 @@ javaVersion=17
 mcVersion=1.18.2
 forgeVersion=40.1.57
 optifineVersion=1.18.2_HD_U_H7
-serverHostname=207.180.196.61
+serverHostname=astrauworld.ovh
 serverPort=33542
