--- a/.gitignore
+++ b/.gitignore
@@ -12,6 +12,7 @@ out
 *.iws
 *.iml
 .idea
+src/test
 
 # gradle
 build
@@ -21,3 +22,4 @@ build
 eclipse
 run
 installer.log
+src/main/java/fr/timeto/astrauworld/launcher/secret
