--- a/src/main/resources/launcher.properties
+++ b/src/main/resources/launcher.properties
@@ -1,10 +1,10 @@
 # Astrauworld Launcher properties TODO CHANGER LA VERSION A CHAQUE RELEASE
-launcherVersion=Beta2.3.0
+launcherVersion=Beta2.3.1
 bootstrapVersion=1.2.1
-blueMapLink=http://astrauworld.ovh:8100
+blueMapLink=http://map.astrauworld.be
 javaVersion=17
 mcVersion=1.18.2
 forgeVersion=40.1.57
 optifineVersion=1.18.2_HD_U_H7
-serverHostname=astrauworld.ovh
+serverHostname=www.astrauworld.be
 serverPort=33542
