Omori + couleurs personnalisables

--- a/build.gradle
+++ b/build.gradle
@@ -41,6 +41,7 @@ dependencies {
     implementation('org.commonmark:commonmark:0.21.0')
     implementation('com.github.TimEtOff:discord-rpc:master-SNAPSHOT')
     implementation('net.harawata:appdirs:1.2.1')
+    implementation('org.imgscalr:imgscalr-lib:4.2')
 //    testImplementation('com.github.java-native-access:jna:5.6.0')
 //    testImplementation('net.java.dev.jna:jna:5.13.0')
 }
