--- a/build.gradle
+++ b/build.gradle
@@ -27,26 +27,27 @@ repositories {
 
 dependencies {
     implementation('fr.flowarg:flowupdater:1.7.4')
-    implementation('com.google.code.gson:gson:2.10')
+    implementation('com.google.code.gson:gson:2.10.1')
     implementation('fr.flowarg:flowmultitools:1.4.0')
-    implementation('fr.flowarg:openlauncherlib:3.2.5')
-    implementation('org.json:json:20220924')
+    implementation('fr.flowarg:openlauncherlib:3.2.6')
+    implementation('org.json:json:20230227')
     implementation('org.apache.commons:commons-compress:1.21')
 //    implementation('fr.litarvan:openauth:1.1.5')
     implementation('com.github.litarvan:OpenAuth:master-SNAPSHOT')
     implementation('fr.theshark34.swinger:swinger:1.0.1-BETA')
-    implementation('com.github.TimEtOff:TimUtilsLib:7961353e6c8f18ca870dbb81e600c4090da12ba6')
+    implementation('com.github.TimEtOff:TimUtilsLib:8ebcad452b312494aa1384fa739af9f9b293d26d')
     implementation('com.github.lucaazalim:minecraft-server-ping:b1d8c96009d3a86184f5e75820e1e6e97eee5cd1')
-    implementation('org.projectlombok:lombok:1.18.20')
+    implementation('org.projectlombok:lombok:1.18.26')
     implementation('org.commonmark:commonmark:0.21.0')
     implementation('com.github.TimEtOff:discord-rpc:master-SNAPSHOT')
     implementation('net.harawata:appdirs:1.2.1')
+    implementation('org.imgscalr:imgscalr-lib:4.2')
 //    testImplementation('com.github.java-native-access:jna:5.6.0')
 //    testImplementation('net.java.dev.jna:jna:5.13.0')
 }
 
 javafx {
-    version = 19
+    version = 17
     modules = ['javafx.controls' , 'javafx.swing' , 'javafx.web']
 }
 
