--- a/build.gradle
+++ b/build.gradle
@@ -16,6 +16,7 @@ version properties.getProperty('launcherVersion')
 
 repositories {
     mavenCentral()
+    jcenter()
     maven {
         url 'https://litarvan.github.io/maven'
     }
@@ -44,6 +45,7 @@ dependencies {
     implementation('org.imgscalr:imgscalr-lib:4.2')
 //    testImplementation('com.github.java-native-access:jna:5.6.0')
 //    testImplementation('net.java.dev.jna:jna:5.13.0')
+    implementation('org.apache.xmlgraphics:batik-all:1.16')
 }
 
 javafx {
