--- a/build.gradle
+++ b/build.gradle
@@ -31,23 +31,24 @@ repositories {
 }
 
 dependencies {
-    implementation('fr.flowarg:flowupdater:1.7.4')
+    implementation('fr.flowarg:flowupdater:1.8.4')
     implementation('com.google.code.gson:gson:2.10.1')
-    implementation('fr.flowarg:flowmultitools:1.4.0')
-    implementation('fr.flowarg:openlauncherlib:3.2.6')
-    implementation('org.json:json:20230227')
-    implementation('org.apache.commons:commons-compress:1.21')
+    implementation('fr.flowarg:flowmultitools:1.4.3')
+    implementation('fr.flowarg:openlauncherlib:3.2.10')
+    implementation('org.json:json:20240303')
+    implementation('org.apache.commons:commons-compress:1.26.1')
 //    implementation('fr.litarvan:openauth:1.1.5')
     implementation('com.github.litarvan:OpenAuth:master-SNAPSHOT')
     implementation('fr.theshark34.swinger:swinger:1.0.1-BETA')
     implementation('com.github.TimEtOff:TimUtilsLib:8ebcad452b312494aa1384fa739af9f9b293d26d')
-    implementation('com.github.lucaazalim:minecraft-server-ping:46ea98b7c670b4ceef3633ace8942c44ad88c67b')
+    implementation('com.github.lucaazalim:minecraft-server-ping:46ea98b7c6')
     implementation('org.projectlombok:lombok:1.18.26')
     implementation('org.commonmark:commonmark:0.21.0')
     implementation('com.github.TimEtOff:discord-rpc:master-SNAPSHOT')
     implementation('net.harawata:appdirs:1.2.1')
     implementation('org.imgscalr:imgscalr-lib:4.2')
-    implementation('org.apache.xmlgraphics:batik-all:1.16')
+    implementation('com.kitfox.svg:svg-salamander:1.0')
+
 }
 
 javafx {
