--- a/src/main/resources/launcher.properties
+++ b/src/main/resources/launcher.properties
@@ -5,6 +5,6 @@ blueMapLink=http://map.astrauworld.be
 javaVersion=17
 mcVersion=1.18.2
 forgeVersion=40.1.57
-optifineVersion=1.18.2_HD_U_H7
-serverHostname=www.astrauworld.be
-serverPort=33542
+optifineVersion=1.18.2_HD_U_H9.jar
+serverHostname=toChange
+serverPort=10501
