--- a/src/main/resources/launcher.properties
+++ b/src/main/resources/launcher.properties
@@ -1,10 +1,10 @@
 # Astrauworld Launcher properties TODO CHANGER LA VERSION A CHAQUE RELEASE
 launcherVersion=Beta2.3.4
 bootstrapVersion=2.0.0
-blueMapLink=http://map.astrauworld.be
 javaVersion=17
 mcVersion=1.18.2
 forgeVersion=40.2.9
 optifineVersion=1.18.2_HD_U_H9
-serverHostname=toChange
 serverPort=10501
+bluemapPort=10502
+sitePort=10504
